Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28471

INSTALL ERROR Innodb engine settings Page size 64KiB causing error

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.6.7, 10.7.3, 10.8.2
    • 10.7.4, 10.6.8, 10.8.3, 10.9.1
    • Packaging, Platform Windows

    Description

      3 info events:

      • C:\Program Files\MariaDB 10.8\bin\mysqld.exe (server 10.8.2-MariaDB) starting as process 3196 ...
      • Plugin 'FEEDBACK' is disabled.
      • MariaDB 10.8 (x64)
        10.8.2.0
        1033
        1603
        MariaDB Corporation Ab
        (NULL)

      7B45434244423035372D394545442D343535322D413539362D4138453432333533433537397D3030303031363735333364316134623430376164646630323162653235643932653834663030303030393034

      In Words

      0000: 4243457B 35304244 45392D37 342D4445
      0010: 2D323535 36393541 4538412D 35333234
      0020: 37354333 30307D39 36313030 33333537
      0030: 34613164 37303462 66646461 62313230
      0040: 64353265 38653239 30306634 39303030
      0050: 3430

      In Bytes

      0000: 7B 45 43 42 44 42 30 35

      {ECBDB05 0008: 37 2D 39 45 45 44 2D 34 7-9EED-4 0010: 35 35 32 2D 41 35 39 36 552-A596 0018: 2D 41 38 45 34 32 33 35 -A8E4235 0020: 33 43 35 37 39 7D 30 30 3C579}

      00
      0028: 30 30 31 36 37 35 33 33 00167533
      0030: 64 31 61 34 62 34 30 37 d1a4b407
      0038: 61 64 64 66 30 32 31 62 addf021b
      0040: 65 32 35 64 39 32 65 38 e25d92e8
      0048: 34 66 30 30 30 30 30 39 4f000009
      0050: 30 34 04

      5 error events:
      *InnoDB: innodb_page_size=65536 requires innodb_buffer_pool_size >= 20MiB current 10MiB

      • Plugin 'InnoDB' init function returned error.
      • Plugin 'InnoDB' registration as a STORAGE ENGINE failed.
      • Unknown/unsupported storage engine: InnoDB
      • Aborting

      Daniel Black told me I should open a BugReport.
      I can reproduce the issue.

      Attachments

        Issue Links

          Activity

            Transition Time In Source Status Execution Times
            Vladislav Vaintroub made transition -
            Open Closed
            9d 2h 14m 1

            People

              wlad Vladislav Vaintroub
              C0rT3X Philipp DANNER
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.